# llm-wiki

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts  wiki_config.yaml.example
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/resources/: ocr_worker.py
core/src/: benchmark.rs  bulk.rs  cli.rs  compile.rs  compile_chunk.rs  compile_parse.rs  compile_prompt.rs  config.rs  consolidate.rs  crystallize.rs  dream.rs  error.rs  gen_chart.rs  graph.rs  ledger.rs  lib.rs  lint.rs  llm.rs  local_ocr.rs  ocr_api.rs  package.rs  query.rs  search.rs  search_tokenize.rs  table_extract.rs  table_query.rs  types.rs  update.rs  url2markdown.rs
core/templates/: schema.md
public/: settings.html
scripts/: build-cli.sh  install-cli.ps1  install-cli.sh  package-skill.sh  package.mjs
skills/llm-wiki-cli/: COMPILE_SPEC.md  INSTALL.md  SKILL.md
skills/llm-wiki-cli/agents/: openai.yaml
src/: App.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Sidebar.tsx  StatusBar.tsx
src/styles/: globals.css
