[workspace]
resolver = "2"
members = ["core", "cli", "src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
